syntax = "proto3";

option go_package = "api";

service BobcaygeonManagement {
  rpc GetSpeakers (GetSpeakersRequest) returns (GetSpeakersResponse) {}
}

message Speaker {
    string id = 1;
    string displayName = 2;
}

message GetSpeakersResponse {
  repeated Speaker speakers = 1;
  int32 returnCode = 2;
}

message GetSpeakersRequest {
  string speakerId = 1;
}